Alignment fix for sonar more details.

--- a/Hygieia_UI/UI/src/app/css/projectmapp.less
+++ b/Hygieia_UI/UI/src/app/css/projectmapp.less
@@ -54,8 +54,6 @@
 }
 .project-map-search-bar{
     border-radius: 0px;
-    width:60%;
-    
 }
 .project-map-add-btn{
     margin-top:9.7%;
